--- a/bower.json
+++ b/bower.json
@@ -4,9 +4,11 @@
   "devDependencies": {
     "angular": "~1.2",
     "angular-mocks": "~1.2",
-    "bootstrap": "~3.1",
     "angular-bootstrap": "~0.10.0",
     "angular-ui-router": "~0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap-sass-official": "~3.2.0+2",
+    "fontawesome": "~4.2.0"
+  }
 }
