--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap-sass-official": "~3.2.0+2",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "angular-ui-utils": "bower-route"
   }
 }
