--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Robert Barron",
   "name": "ng-ks-test",
   "version": "0.3.2",
-  "homepage": "http://github.com/robertbarron/ng-ks-test/",
+  "homepage": "www.robertobarron.com",
   "repository": {
     "type": "git",
     "url": "git@github.com:robertbarron/ng-ks-test.git"
@@ -25,8 +25,8 @@
     "grunt-karma": "^0.8.2",
     "grunt-ngmin": "0.0.2",
     "karma": "^0.12.9",
+    "karma-chrome-launcher": "^0.1.4",
     "karma-coffee-preprocessor": "^0.2.1",
-    "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5"
   }
 }
